@@ -1,11 +1,13 @@
 /*
- * @(#)Integer.java	1.92 06/04/07
+ * @(#)Integer.java	1.93 09/02/26
  *
  * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
  * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
 package java.lang;
+
+import java.util.Properties;
 
 /**
  * The <code>Integer</code> class wraps a value of the primitive type
@@ -29,7 +31,7 @@ package java.lang;
  * @author  Lee Boynton
  * @author  Arthur van Hoff
  * @author  Josh Bloch
- * @version 1.92, 04/07/06
+ * @version 1.93, 02/26/09
  * @since JDK1.0
  */
 public final class Integer extends Number implements Comparable<Integer> {
@@ -523,7 +525,7 @@ public final class Integer extends Number implements Comparable<Integer> {
      * 		  does not contain a parsable <code>int</code>.
      */
     public static Integer valueOf(String s, int radix) throws NumberFormatException {
-	return new Integer(parseInt(s,radix));
+	return Integer.valueOf(parseInt(s,radix));
     }
 
     /**
@@ -548,20 +550,59 @@ public final class Integer extends Number implements Comparable<Integer> {
      * @exception  NumberFormatException  if the string cannot be parsed 
      *             as an integer.
      */
-    public static Integer valueOf(String s) throws NumberFormatException
-    {
-	return new Integer(parseInt(s, 10));
+    public static Integer valueOf(String s) throws NumberFormatException {
+	return Integer.valueOf(parseInt(s, 10));
+    }
+
+    /**
+     * Cache to support the object identity semantics of autoboxing for values between 
+     * -128 and 127 (inclusive) as required by JLS.
+     *
+     * The cache is initialized on first usage. During VM initialization the
+     * getAndRemoveCacheProperties method may be used to get and remove any system
+     * properites that configure the cache size. At this time, the size of the
+     * cache may be controlled by the vm option -XX:AutoBoxCacheMax=<size>.
+     */
+
+    // value of java.lang.Integer.IntegerCache.high property (obtained during VM init)
+    private static String integerCacheHighPropValue;
+
+    static void getAndRemoveCacheProperties() {
+        if (!sun.misc.VM.isBooted()) {
+            Properties props = System.getProperties();
+            integerCacheHighPropValue =
+                (String)props.remove("java.lang.Integer.IntegerCache.high");
+            if (integerCacheHighPropValue != null)
+                System.setProperties(props);  // remove from system props
+        }
     }
 
     private static class IntegerCache {
-	private IntegerCache(){}
+        static final int high;
+        static final Integer cache[];
 
-	static final Integer cache[] = new Integer[-(-128) + 127 + 1];
+        static {
+            final int low = -128;
 
-	static {
-	    for(int i = 0; i < cache.length; i++)
-		cache[i] = new Integer(i - 128);
-	}
+            // high value may be configured by property
+            int h = 127;
+            if (integerCacheHighPropValue != null) {
+                // Use Long.decode here to avoid invoking methods that
+                // require Integer's autoboxing cache to be initialized
+                int i = Long.decode(integerCacheHighPropValue).intValue();
+                i = Math.max(i, 127);
+                // Maximum array size is Integer.MAX_VALUE
+                h = Math.min(i, Integer.MAX_VALUE - -low);
+            }
+            high = h;
+
+            cache = new Integer[(high - low) + 1];
+            int j = low;
+            for(int k = 0; k < cache.length; k++)
+                cache[k] = new Integer(j++);
+        }
+
+        private IntegerCache() {}
     }
 
     /**
@@ -578,11 +619,10 @@ public final class Integer extends Number implements Comparable<Integer> {
      * @since  1.5
      */
     public static Integer valueOf(int i) {
-	final int offset = 128;
-	if (i >= -128 && i <= 127) { // must cache 
-	    return IntegerCache.cache[i + offset];
-	}
-        return new Integer(i);
+        if(i >= -128 && i <= IntegerCache.high)
+            return IntegerCache.cache[i + 128];
+        else
+            return new Integer(i);
     }
 
     /**
@@ -781,7 +821,7 @@ public final class Integer extends Number implements Comparable<Integer> {
      */
     public static Integer getInteger(String nm, int val) {
         Integer result = getInteger(nm, null);
-        return (result == null) ? new Integer(val) : result;
+        return (result == null) ? Integer.valueOf(val) : result;
     }
 
     /**
@@ -908,12 +948,12 @@ public final class Integer extends Number implements Comparable<Integer> {
 
         try {
             result = Integer.valueOf(nm.substring(index), radix);
-            result = negative ? new Integer(-result.intValue()) : result;
+            result = negative ? Integer.valueOf(-result.intValue()) : result;
         } catch (NumberFormatException e) {
             // If number is Integer.MIN_VALUE, we'll end up here. The next line
             // handles this case, and causes any genuine format error to be
             // rethrown.
-            String constant = negative ? new String("-" + nm.substring(index))
+            String constant = negative ? "-" + nm.substring(index)
                                        : nm.substring(index);
             result = Integer.valueOf(constant, radix);
         }
